--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "@capacitor-community/contacts": "^0.1.1",
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/sms": "^5.31.1",
+    "@ionic-native/social-sharing": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "cordova-sms-plugin": "^1.0.1",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
